# breader

./: .gitmodules  CMakeLists.txt
include/breader/: endian.hh  io.hh  reader.hh  writer.hh
src/: CMakeLists.txt  io.cc
tests/: CMakeLists.txt  test_io.cc  util.hh
